finishes the base features and notifications

--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,7 @@
         "128": "img/logo.png"
     },
     "permissions": [
-        "activeTab"
+        "activeTab",
+        "storage"
     ]
 }
